// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`documenter output > dom 1`] = `
{
  "classes": [
    {
      "methods": [
        {
          "name": "blur",
          "parameters": [],
          "returnType": {
            "name": "void",
          },
        },
        {
          "description": "Performs a click by triggering a mouse event.
Note that programmatic events ignore disabled attribute and will trigger listeners even if the element is disabled.",
          "name": "click",
          "parameters": [
            {
              "flags": {
                "isOptional": true,
              },
              "name": "params",
              "typeName": "MouseEventInit",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "name": "find",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper<NewElementType> | null",
          },
        },
        {
          "name": "findAll",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "Array<ElementWrapper<NewElementType>>",
          },
        },
        {
          "name": "findAllByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "Array<ElementWrapper<NewElementType>>",
          },
        },
        {
          "description": "Returns the wrappers of all components that match the specified component type and the specified CSS selector.
If no CSS selector is specified, returns all of the components that match the specified component type.
If no matching component is found, returns an empty array.",
          "name": "findAllComponents",
          "parameters": [
            {
              "description": "Component's wrapper class",
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "ComponentWrapperClass<Wrapper, ElementType>",
            },
            {
              "description": "CSS selector",
              "flags": {
                "isOptional": true,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "Array<Wrapper>",
          },
        },
        {
          "name": "findAny",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selectors",
              "typeName": "Array<string>",
            },
          ],
          "returnType": {
            "name": "ElementWrapper<NewElementType> | null",
          },
        },
        {
          "name": "findByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper<NewElementType> | null",
          },
        },
        {
          "description": "Returns the component wrapper matching the specified selector.
If the specified selector doesn't match any element, it returns \`null\`.

Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.",
          "name": "findComponent",
          "parameters": [
            {
              "description": "CSS selector",
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
            {
              "description": "Component's wrapper class",
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "WrapperClass<Wrapper, ElementType>",
            },
          ],
          "returnType": {
            "name": "Wrapper | null",
          },
        },
        {
          "name": "fireEvent",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "event",
              "typeName": "Event",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "name": "focus",
          "parameters": [],
          "returnType": {
            "name": "void",
          },
        },
        {
          "name": "getElement",
          "parameters": [],
          "returnType": {
            "name": "ElementType",
          },
        },
        {
          "name": "keydown",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyCode",
              "typeName": "KeyCode",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "name": "keydown",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyboardEventProps",
              "typeName": "KeyboardEventInit",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "name": "keypress",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyCode",
              "typeName": "KeyCode",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "name": "keyup",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyCode",
              "typeName": "KeyCode",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "name": "matches",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "this | null",
          },
        },
      ],
      "name": "AbstractWrapper",
    },
    {
      "methods": [
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.blur",
          },
          "name": "blur",
          "parameters": [],
          "returnType": {
            "name": "void",
          },
        },
        {
          "description": "Performs a click by triggering a mouse event.
Note that programmatic events ignore disabled attribute and will trigger listeners even if the element is disabled.",
          "inheritedFrom": {
            "name": "AbstractWrapper.click",
          },
          "name": "click",
          "parameters": [
            {
              "flags": {
                "isOptional": true,
              },
              "name": "params",
              "typeName": "MouseEventInit",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.find",
          },
          "name": "find",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper<NewElementType> | null",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAll",
          },
          "name": "findAll",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "Array<ElementWrapper<NewElementType>>",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAllByClassName",
          },
          "name": "findAllByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "Array<ElementWrapper<NewElementType>>",
          },
        },
        {
          "description": "Returns the wrappers of all components that match the specified component type and the specified CSS selector.
If no CSS selector is specified, returns all of the components that match the specified component type.
If no matching component is found, returns an empty array.",
          "inheritedFrom": {
            "name": "AbstractWrapper.findAllComponents",
          },
          "name": "findAllComponents",
          "parameters": [
            {
              "description": "Component's wrapper class",
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "ComponentWrapperClass<Wrapper, ElementType>",
            },
            {
              "description": "CSS selector",
              "flags": {
                "isOptional": true,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "Array<Wrapper>",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAny",
          },
          "name": "findAny",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selectors",
              "typeName": "Array<string>",
            },
          ],
          "returnType": {
            "name": "ElementWrapper<NewElementType> | null",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findByClassName",
          },
          "name": "findByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper<NewElementType> | null",
          },
        },
        {
          "description": "Returns the component wrapper matching the specified selector.
If the specified selector doesn't match any element, it returns \`null\`.

Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.",
          "inheritedFrom": {
            "name": "AbstractWrapper.findComponent",
          },
          "name": "findComponent",
          "parameters": [
            {
              "description": "CSS selector",
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
            {
              "description": "Component's wrapper class",
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "WrapperClass<Wrapper, ElementType>",
            },
          ],
          "returnType": {
            "name": "Wrapper | null",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.fireEvent",
          },
          "name": "fireEvent",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "event",
              "typeName": "Event",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.focus",
          },
          "name": "focus",
          "parameters": [],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.getElement",
          },
          "name": "getElement",
          "parameters": [],
          "returnType": {
            "name": "ElementType",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.keydown",
          },
          "name": "keydown",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyCode",
              "typeName": "KeyCode",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.keydown",
          },
          "name": "keydown",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyboardEventProps",
              "typeName": "KeyboardEventInit",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.keypress",
          },
          "name": "keypress",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyCode",
              "typeName": "KeyCode",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.keyup",
          },
          "name": "keyup",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyCode",
              "typeName": "KeyCode",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.matches",
          },
          "name": "matches",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "this | null",
          },
        },
      ],
      "name": "ElementWrapper",
    },
    {
      "methods": [
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.blur",
          },
          "name": "blur",
          "parameters": [],
          "returnType": {
            "name": "void",
          },
        },
        {
          "description": "Performs a click by triggering a mouse event.
Note that programmatic events ignore disabled attribute and will trigger listeners even if the element is disabled.",
          "inheritedFrom": {
            "name": "AbstractWrapper.click",
          },
          "name": "click",
          "parameters": [
            {
              "flags": {
                "isOptional": true,
              },
              "name": "params",
              "typeName": "MouseEventInit",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.find",
          },
          "name": "find",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper<NewElementType> | null",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAll",
          },
          "name": "findAll",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "Array<ElementWrapper<NewElementType>>",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAllByClassName",
          },
          "name": "findAllByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "Array<ElementWrapper<NewElementType>>",
          },
        },
        {
          "description": "Returns the wrappers of all components that match the specified component type and the specified CSS selector.
If no CSS selector is specified, returns all of the components that match the specified component type.
If no matching component is found, returns an empty array.",
          "inheritedFrom": {
            "name": "AbstractWrapper.findAllComponents",
          },
          "name": "findAllComponents",
          "parameters": [
            {
              "description": "Component's wrapper class",
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "ComponentWrapperClass<Wrapper, ElementType>",
            },
            {
              "description": "CSS selector",
              "flags": {
                "isOptional": true,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "Array<Wrapper>",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAny",
          },
          "name": "findAny",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selectors",
              "typeName": "Array<string>",
            },
          ],
          "returnType": {
            "name": "ElementWrapper<NewElementType> | null",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findByClassName",
          },
          "name": "findByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper<NewElementType> | null",
          },
        },
        {
          "description": "Returns the component wrapper matching the specified selector.
If the specified selector doesn't match any element, it returns \`null\`.

Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.",
          "inheritedFrom": {
            "name": "AbstractWrapper.findComponent",
          },
          "name": "findComponent",
          "parameters": [
            {
              "description": "CSS selector",
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
            {
              "description": "Component's wrapper class",
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "WrapperClass<Wrapper, ElementType>",
            },
          ],
          "returnType": {
            "name": "Wrapper | null",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.fireEvent",
          },
          "name": "fireEvent",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "event",
              "typeName": "Event",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.focus",
          },
          "name": "focus",
          "parameters": [],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.getElement",
          },
          "name": "getElement",
          "parameters": [],
          "returnType": {
            "name": "ElementType",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.keydown",
          },
          "name": "keydown",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyCode",
              "typeName": "KeyCode",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.keydown",
          },
          "name": "keydown",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyboardEventProps",
              "typeName": "KeyboardEventInit",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.keypress",
          },
          "name": "keypress",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyCode",
              "typeName": "KeyCode",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.keyup",
          },
          "name": "keyup",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "keyCode",
              "typeName": "KeyCode",
            },
          ],
          "returnType": {
            "name": "void",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.matches",
          },
          "name": "matches",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "this | null",
          },
        },
      ],
      "name": "ComponentWrapper",
    },
  ],
}
`;

exports[`documenter output > selectors 1`] = `
{
  "classes": [
    {
      "methods": [
        {
          "name": "find",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "name": "findAll",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<ElementWrapper>",
          },
        },
        {
          "name": "findAllByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<ElementWrapper>",
          },
        },
        {
          "description": "Returns a multi-element wrapper that matches the specified component type with the specified CSS selector.
If no CSS selector is specified, returns a multi-element wrapper that matches the specified component type.",
          "name": "findAllComponents",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "ComponentWrapperClass<Wrapper>",
            },
            {
              "description": "CSS Selector",
              "flags": {
                "isOptional": true,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<Wrapper>",
          },
        },
        {
          "name": "findAny",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selectors",
              "typeName": "Array<string>",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "name": "findByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "description": "Returns a wrapper that matches the specified component type with the specified CSS selector.

Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.",
          "name": "findComponent",
          "parameters": [
            {
              "description": "CSS selector",
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
            {
              "description": "Component's wrapper class",
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "WrapperClass<Wrapper>",
            },
          ],
          "returnType": {
            "name": "Wrapper",
          },
        },
        {
          "name": "getElement",
          "parameters": [],
          "returnType": {
            "name": "string",
          },
        },
        {
          "name": "matches",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "name": "toSelector",
          "parameters": [],
          "returnType": {
            "name": "string",
          },
        },
      ],
      "name": "AbstractWrapper",
    },
    {
      "methods": [
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.find",
          },
          "name": "find",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAll",
          },
          "name": "findAll",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<ElementWrapper>",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAllByClassName",
          },
          "name": "findAllByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<ElementWrapper>",
          },
        },
        {
          "description": "Returns a multi-element wrapper that matches the specified component type with the specified CSS selector.
If no CSS selector is specified, returns a multi-element wrapper that matches the specified component type.",
          "inheritedFrom": {
            "name": "AbstractWrapper.findAllComponents",
          },
          "name": "findAllComponents",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "ComponentWrapperClass<Wrapper>",
            },
            {
              "description": "CSS Selector",
              "flags": {
                "isOptional": true,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<Wrapper>",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAny",
          },
          "name": "findAny",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selectors",
              "typeName": "Array<string>",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findByClassName",
          },
          "name": "findByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "description": "Returns a wrapper that matches the specified component type with the specified CSS selector.

Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.",
          "inheritedFrom": {
            "name": "AbstractWrapper.findComponent",
          },
          "name": "findComponent",
          "parameters": [
            {
              "description": "CSS selector",
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
            {
              "description": "Component's wrapper class",
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "WrapperClass<Wrapper>",
            },
          ],
          "returnType": {
            "name": "Wrapper",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.getElement",
          },
          "name": "getElement",
          "parameters": [],
          "returnType": {
            "name": "string",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.matches",
          },
          "name": "matches",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.toSelector",
          },
          "name": "toSelector",
          "parameters": [],
          "returnType": {
            "name": "string",
          },
        },
      ],
      "name": "ElementWrapper",
    },
    {
      "methods": [
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.find",
          },
          "name": "find",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAll",
          },
          "name": "findAll",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<ElementWrapper>",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAllByClassName",
          },
          "name": "findAllByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<ElementWrapper>",
          },
        },
        {
          "description": "Returns a multi-element wrapper that matches the specified component type with the specified CSS selector.
If no CSS selector is specified, returns a multi-element wrapper that matches the specified component type.",
          "inheritedFrom": {
            "name": "AbstractWrapper.findAllComponents",
          },
          "name": "findAllComponents",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "ComponentWrapperClass<Wrapper>",
            },
            {
              "description": "CSS Selector",
              "flags": {
                "isOptional": true,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<Wrapper>",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAny",
          },
          "name": "findAny",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selectors",
              "typeName": "Array<string>",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findByClassName",
          },
          "name": "findByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "description": "Returns a wrapper that matches the specified component type with the specified CSS selector.

Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.",
          "inheritedFrom": {
            "name": "AbstractWrapper.findComponent",
          },
          "name": "findComponent",
          "parameters": [
            {
              "description": "CSS selector",
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
            {
              "description": "Component's wrapper class",
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "WrapperClass<Wrapper>",
            },
          ],
          "returnType": {
            "name": "Wrapper",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.getElement",
          },
          "name": "getElement",
          "parameters": [],
          "returnType": {
            "name": "string",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.matches",
          },
          "name": "matches",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.toSelector",
          },
          "name": "toSelector",
          "parameters": [],
          "returnType": {
            "name": "string",
          },
        },
      ],
      "name": "ComponentWrapper",
    },
    {
      "methods": [
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.find",
          },
          "name": "find",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAll",
          },
          "name": "findAll",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<ElementWrapper>",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAllByClassName",
          },
          "name": "findAllByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<ElementWrapper>",
          },
        },
        {
          "description": "Returns a multi-element wrapper that matches the specified component type with the specified CSS selector.
If no CSS selector is specified, returns a multi-element wrapper that matches the specified component type.",
          "inheritedFrom": {
            "name": "AbstractWrapper.findAllComponents",
          },
          "name": "findAllComponents",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "ComponentWrapperClass<Wrapper>",
            },
            {
              "description": "CSS Selector",
              "flags": {
                "isOptional": true,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<Wrapper>",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findAny",
          },
          "name": "findAny",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selectors",
              "typeName": "Array<string>",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.findByClassName",
          },
          "name": "findByClassName",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "className",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "description": "Returns a wrapper that matches the specified component type with the specified CSS selector.

Note: This function returns the specified component's wrapper even if the specified selector points to a different component type.",
          "inheritedFrom": {
            "name": "AbstractWrapper.findComponent",
          },
          "name": "findComponent",
          "parameters": [
            {
              "description": "CSS selector",
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
            {
              "description": "Component's wrapper class",
              "flags": {
                "isOptional": false,
              },
              "name": "ComponentClass",
              "typeName": "WrapperClass<Wrapper>",
            },
          ],
          "returnType": {
            "name": "Wrapper",
          },
        },
        {
          "description": "Index is one-based because the method uses the :nth-child() CSS pseudo-class.",
          "name": "get",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "index",
              "typeName": "number",
            },
          ],
          "returnType": {
            "name": "T",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.getElement",
          },
          "name": "getElement",
          "parameters": [],
          "returnType": {
            "name": "string",
          },
        },
        {
          "name": "map",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "factory",
              "typeName": "(wrapper: ElementWrapper) => T",
            },
          ],
          "returnType": {
            "name": "MultiElementWrapper<T>",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.matches",
          },
          "name": "matches",
          "parameters": [
            {
              "flags": {
                "isOptional": false,
              },
              "name": "selector",
              "typeName": "string",
            },
          ],
          "returnType": {
            "name": "ElementWrapper",
          },
        },
        {
          "inheritedFrom": {
            "name": "AbstractWrapper.toSelector",
          },
          "name": "toSelector",
          "parameters": [],
          "returnType": {
            "name": "string",
          },
        },
      ],
      "name": "MultiElementWrapper",
    },
  ],
}
`;
